--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         이미지 추가
         <input type="file" id="file" accept="image/*" />
       </label>
-      <input type="text" id="text" placeholder="텍스트 입력 후 더블클릭 :)" />
+      <input type="text" id="text" placeholder="텍스트 입력 후 더블클릭" />
       <button id="save">이미지 저장</button>
     </div>
   </body>
